--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build && npx tailwindcss -i ./src/index.css -o ./dist/output.css ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "malek": "tsc && vite build && npx tailwindcss -i ./src/index.css -o ./dist/output.css && git add . && git commit -m 'new commit' && git push"
+    "malek": "tsc && vite build && npx tailwindcss -i ./src/index.css -o ./dist/output.css && git add . && git commit -m 'new commit' && git push",
+    "wind": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -25,6 +26,7 @@
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.10.0",
     "axios": "^1.6.2",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
