--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "globalize": "^1.7.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mui": "^0.0.1",
@@ -44,6 +47,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-i18next": "^14.1.0",
     "react-icons": "^4.11.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.6",
