--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next-http-backend": "^2.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
